# docs/swagger.yaml
@@ -1,11 +1,9 @@
 basePath: /
 definitions:
-  models.User:
+  dto.CreateUserRequest:
     properties:
       email:
         type: string
-      id:
-        type: integer
       password:
         type: string
       phone:
@@ -40,7 +38,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/models.User'
+          $ref: '#/definitions/dto.CreateUserRequest'
       produces:
       - application/json
       responses:
