# dto/users.dto.go
@@ -1,0 +1,8 @@
+package dto;
+
+type CreateUserRequest struct {
+    Username string `json:"username" form:"username"`
+    Email    string `json:"email" form:"email"`
+    Phone    string `json:"phone" form:"phone"`
+    Password string `json:"password" form:"password"`
+}
